content/contracts/v4.x/index.mdx
---
title: Contracts
description: Contracts
---

**A library for secure smart contract development.** Build on a solid foundation of community-vetted code.

* Implementations of standards like [ERC20](erc20.adoc) and [ERC721](erc721.adoc).
* Flexible [role-based permissioning](access-control.adoc) scheme.
* Reusable [Solidity components](utilities.adoc) to build custom contracts and complex decentralized systems.

<Callout type='warn'>
OpenZeppelin Contracts uses semantic versioning to communicate backwards compatibility of its API and storage layout. For upgradeable contracts, the storage layout of different major versions should be assumed incompatible, for example, it is unsafe to upgrade from 4.9.3 to 5.0.0. Learn more at [Backwards Compatibility](backwards-compatibility.adoc).
</Callout>

## Overview

### Installation

#### Hardhat (npm)

```console
$ npm install @openzeppelin/contracts
```

#### Foundry (git)

<Callout type='warn'>
When installing via git, it is a common error to use the `master` branch. This is a development branch that should be avoided in favor of tagged releases. The release process involves security measures that the `master` branch does not guarantee.
</Callout>

<Callout type='warn'>
Foundry installs the latest version initially, but subsequent `forge update` commands will use the `master` branch.
</Callout>

```console
$ forge install OpenZeppelin/openzeppelin-contracts
```

Add `@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/` in `remappings.txt.` 

### Usage

Once installed, you can use the contracts in the library by importing them:

<include cwd lang='solidity'>./examples/MyNFT.sol</include>

<Callout>
If you’re new to smart contract development, head to [Developing Smart Contracts](learn::developing-smart-contracts.adoc) to learn about creating a new project and compiling your contracts.
</Callout>

To keep your system secure, you should ***always*** use the installed code as-is, and neither copy-paste it from online sources, nor modify it yourself. The library is designed so that only the contracts and functions you use are deployed, so you don’t need to worry about it needlessly increasing gas costs.

## Security

Please report any security issues you find via our [bug bounty program on Immunefi](https://www.immunefi.com/bounty/openzeppelin) or directly to security@openzeppelin.org.

The [Security Center](https://contracts.openzeppelin.com/security) contains more details about the secure development process.

## Learn More

The guides in the sidebar will teach about different concepts, and how to use the related contracts that OpenZeppelin Contracts provides:

* [Access Control](access-control.adoc): decide who can perform each of the actions on your system.
* [Tokens](tokens.adoc): create tradable assets or collectibles, like the well known [ERC20](erc20.adoc) and [ERC721](erc721.adoc) standards.
* [Utilities](utilities.adoc): generic useful tools, including non-overflowing math, signature verification, and trustless paying systems.

The [full API](contracts/v5.x/api/token/ERC20.mdx) is also thoroughly documented, and serves as a great reference when developing your smart contract application. You can also ask for help or follow Contracts' development in the [community forum](https://forum.openzeppelin.com).

The following articles provide great background reading, though please note, some of the referenced tools have changed as the tooling in the ecosystem continues to rapidly evolve.

* [The Hitchhiker’s Guide to Smart Contracts in Ethereum](https://blog.openzeppelin.com/the-hitchhikers-guide-to-smart-contracts-in-ethereum-848f08001f05) will help you get an overview of the various tools available for smart contract development, and help you set up your environment.
* [A Gentle Introduction to Ethereum Programming, Part 1](https://blog.openzeppelin.com/a-gentle-introduction-to-ethereum-programming-part-1-783cc7796094) provides very useful information on an introductory level, including many basic concepts from the Ethereum platform.
* For a more in-depth dive, you may read the guide [Designing the architecture for your Ethereum application](https://blog.openzeppelin.com/designing-the-architecture-for-your-ethereum-application-9cec086f8317), which discusses how to better structure your application and its relationship to the real world.
